Overflow fix

--- a/CSS/scss/_MediaQuery414p.scss
+++ b/CSS/scss/_MediaQuery414p.scss
@@ -82,21 +82,21 @@
             }
     
               .misionBarra1 {
-                width: 29%;
+                width: 34%;
                 top: 363px;
                 left: 22px;
                 height: 28px;        
                 border-radius: 5px;
             }
               .misionBarra2 {
-                width: 29%;
+                width: 34%;
                 top: 363px;
                 left: 19px;
                 height: 26px;
                 border-radius: 5px;
               }        
               .misionBarra3 {
-                width: 29%;
+                width: 34%;
                 top: 363px;
                 left: 15px;
                 height: 23px;
@@ -107,11 +107,11 @@
               position: absolute;
               border-radius: 5px;
               bottom: 335px;
-              font-size: 13px;
+              font-size: 17px;
               height: 29px;
               width: 65%;
               right: -5px;
-              top: -99px;
+              top: -100px;
               left: -81px;                
             }
     
