--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1858,19 +1858,19 @@ p.FooterText {
   #Mision p {
     font-size: 10px; }
   .misionBarra1 {
-    width: 29%;
+    width: 34%;
     top: 363px;
     left: 22px;
     height: 28px;
     border-radius: 5px; }
   .misionBarra2 {
-    width: 29%;
+    width: 34%;
     top: 363px;
     left: 19px;
     height: 26px;
     border-radius: 5px; }
   .misionBarra3 {
-    width: 29%;
+    width: 34%;
     top: 363px;
     left: 15px;
     height: 23px;
@@ -1879,11 +1879,11 @@ p.FooterText {
     position: absolute;
     border-radius: 5px;
     bottom: 335px;
-    font-size: 13px;
+    font-size: 17px;
     height: 29px;
     width: 65%;
     right: -5px;
-    top: -99px;
+    top: -100px;
     left: -81px; }
   .textBox {
     margin: -38%;
